[package]
name = "rename"
version = "0.3.0"
edition = "2021"

[[bin]]
name = "rn"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.6", features = ["derive"] }
regex = "1.5.6"
mrp = { path = "./mrp/" }

[workspace]
members = ["mrp"]
