[package]
name = "rename"
version = "0.4.0"
edition = "2021"

[[bin]]
name = "rn"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.6", features = ["derive"] }
regex = "1.5.6"
mrp = { path = "./mrp/" }
glob = "0.3.1"
num_cpus = "1.15.0"

[workspace]
members = ["mrp"]

[toolchain]
channel = "nightly"
