[package]
name = "rename"
version = "0.4.0"
edition = "2021"

[[bin]]
name = "rn"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.6", features = ["derive"] }
regex = "1.5.6"
mrp = { path = "./mrp/" }
glob = "0.3.1"
num_cpus = "1.15.0"
stderrlog = "0.5.4"
log = "0.4.17"

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "bulk_renames"
harness = false

[workspace]
members = ["mrp"]
