[package]
name = "mrp"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5.6"

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "mrp_vs_regex"
harness = false

[[bench]]
name = "parsing"
harness = false
